[gd_scene load_steps=3 format=3 uid="uid://b72gqhvkpuiwb"]

[ext_resource type="Theme" uid="uid://dpqda1rl4km7n" path="res://art/theme/main.tres" id="1_2yxgj"]
[ext_resource type="Script" path="res://scripts/menu/pause_menu.gd" id="1_07eh7"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_07eh7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -389.0
offset_top = -132.5
offset_right = 389.0
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 2

[node name="Continue" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
theme = ExtResource("1_2yxgj")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "CONTINUE HACKING"

[node name="Restart" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../MainMenu")
theme = ExtResource("1_2yxgj")
theme_override_colors/font_color = Color(0.996078, 0.996078, 0.996078, 1)
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Continue")
theme = ExtResource("1_2yxgj")
theme_override_colors/font_color = Color(0.996078, 0.996078, 0.996078, 1)
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
